<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="6"
        android:columnCount="4" >

        <Button
            android:id="@+id/button_one"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_one"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_two"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_two"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_three"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_three"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_suma"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_suma"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_four"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_four"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_five"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_five"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_six"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_six"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_resta"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_resta"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_seven"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_seven"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_eight"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_eight"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_nine"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_nine"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_multi"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_multi"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_ce"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_ce"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_zero"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_zero"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_c"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_c"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_div"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_div"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_equal"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_equal"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="4"
            android:layout_columnWeight="1"
            android:layout_columnSpan="4"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/button_scientific"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/button_scientific"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="5"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:onClick="onScientificClicked" />

        <Button
            android:id="@+id/button_NIA"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="NIA"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_row="5"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:onClick="onNIAClicked" />




    </GridLayout>

</RelativeLayout>